--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,10 @@ seaborn = "*"
 openpyxl = "*"
 plotly-express = "*"
 nbformat = "*"
+requests = "*"
+html5lib = "*"
+bs4 = "*"
+lxml = "*"
 
 [dev-packages]
 notebook = "*"
