Labb-1 swe pop fix and andel fix

--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,7 @@ lxml = "*"
 python-dotenv = "*"
 dash = "*"
 dash-bootstrap-components = "*"
+beautifulsoup4 = "*"
 
 [dev-packages]
 notebook = "*"
